tests/specs/ecosystem/jlarky/react_json_script/0_1_1.test
jlarky/react-json-script/0.1.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2503 [ERROR]: Cannot find namespace 'JSX'.
 */ export function JsonScript(props: JsonScriptProps): JSX.Element {
                                                        ~~~
    at file://<tmpdir>/index.ts:13:57

